--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,4 @@
-npversion: '3.0'
+version: '3.0'
 
 services:
   grafana:
@@ -7,8 +7,9 @@ services:
     build:
       context: ./.config
       args:
-        grafana_image: ${GRAFANA_IMAGE:-grafana-enterprise}
-        grafana_version: ${GRAFANA_VERSION:-10.0.3}
+        grafana_image: ${GRAFANA_IMAGE:-grafana}
+        grafana_version: ${GRAFANA_VERSION:-10.2.0}
+        livereload_host: "https:\\/\\/${CODESPACE_NAME}-35729.app.github.dev"
     ports:
       - 3000:3000/tcp
     volumes:
